--- a/src/components/Main/style.module.css
+++ b/src/components/Main/style.module.css
@@ -1,19 +1,20 @@
 .main {
     @apply
     flex flex-col items-center justify-center
+    px-8 md:px-0
 }
 
 .heading {
     @apply
-    text-6xl font-bold
-    text-center leading-tight
+    text-3xl md:text-6xl font-bold
+    text-center md:leading-tight
     text-gray-900
 }
 
 .description {
     @apply
-    text-2xl text-center
-    text-gray-400 w-3/5
+    text-lg md:text-2xl text-center
+    text-gray-400 w-full md:w-3/5
     mt-3 mb-6
 }
 
@@ -26,3 +27,4 @@
     @apply
     bg-gray-900 hover:bg-white transition-all text-white hover:text-black px-6 py-4 rounded-2xl
 }
+
