--- a/src/pages/Home/style.module.css
+++ b/src/pages/Home/style.module.css
@@ -1,15 +1,5 @@
-.main {
+.mainSection {
     @apply
-    max-w-7xl
-    mx-auto
-}
-
-.header {
-    @apply
-    h-24
-}
-
-.main {
-    @apply
-    h-main
+    md:h-main
+    mt-8 md:mt-0
 }
