--- a/src/components/Works/style.module.css
+++ b/src/components/Works/style.module.css
@@ -1,25 +1,12 @@
-.worksContainer {
+.container {
     @apply
     flex flex-col
     items-center
     px-4 2xl:px-0
 }
-
 .heading {
     @apply
     text-3xl
     font-bold
-}
-
-.works {
-    @apply
-    mt-10 
-    grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3
-    gap-12
-}
-
-.workImage {
-    @apply
-    w-1/2
-    rounded-none
+    text-center
 }
