--- a/src/pages/Work/style.module.css
+++ b/src/pages/Work/style.module.css
@@ -1,7 +1,9 @@
 .container {
     @apply
     flex flex-col gap-4
-    mt-20
+    mx-auto
+    px-10 md:px-0
+    mt-10 md:mt-20 mb-20
 }
 
 .heading {
