--- a/src/pages/WorkDetail/style.module.css
+++ b/src/pages/WorkDetail/style.module.css
@@ -1,7 +1,7 @@
 .worksDetailContainer {
     @apply
     flex flex-col items-start
-    w-4/5 md:w-2/3 
+    w-full md:w-2/3 
     mx-auto
     px-10 md:px-0
     mt-10 md:mt-20 mb-20
