--- a/src/pages/About/style.module.css
+++ b/src/pages/About/style.module.css
@@ -1,6 +1,7 @@
 .about {
     @apply
     flex flex-col items-center
+    w-full md:w-2/3 
     mx-auto
     px-10 md:px-0
     mt-10 md:mt-20 mb-20
