--- a/src/components/AnimatedText/style.module.css
+++ b/src/components/AnimatedText/style.module.css
@@ -1,7 +1,12 @@
 .heading {
     @apply
-    text-3xl md:text-6xl
+    /* text-3xl md:text-6xl*/
     font-bold
     text-center md:leading-tight
     text-gray-900
 }
+
+.heading {
+    font-size: clamp(1.875rem,8vw,3.75rem);
+}
+
