--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,20 @@
 html, body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+h2::selection {
+    color:coral; 
+}
+
+h3::selection{
+    color:coral;
+}
+
+p::selection {
+    color:coral;
+}
+
+img, picture, video, svg {
+    max-width: 100%;
+    object-fit: contain;
+}
