--- a/src/pages/Career/style.module.css
+++ b/src/pages/Career/style.module.css
@@ -4,10 +4,12 @@
     mx-auto
     px-10 md:px-0
     mt-10 md:mt-20 mb-20
+    lg:w-1/2 md:w-2/3 w-full
 }
 
 .heading {
     @apply
     text-4xl font-bold
     text-center
+    mb-8
 }
