--- a/src/components/CareerLine/style.module.css
+++ b/src/components/CareerLine/style.module.css
@@ -2,5 +2,15 @@
     @apply
     flex flex-col
     items-center
-    px-4 2xl:px-0
+    px-8 md:px-0
+    md:w-2/3 w-full
+    mx-auto
+    mt-24 mb-12
+}
+
+.heading {
+    @apply
+    text-4xl font-bold
+    text-center
+    mb-10
 }
