--- a/src/components/WorkBox/style.module.css
+++ b/src/components/WorkBox/style.module.css
@@ -1,10 +1,10 @@
 .workBox {
     @apply
     flex flex-col
-    hover:scale-105
+    hover:scale-100
     transition-all duration-300
-    bg-gray-50 rounded-2xl
-    px-6 py-8
+    bg-slate-100 rounded-2xl
+    px-6 py-7 h-full
 }
 .image {
     @apply
