--- a/src/components/WorksGrid/style.module.css
+++ b/src/components/WorksGrid/style.module.css
@@ -9,8 +9,9 @@
 .works {
     @apply
     mt-10 
-    grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3
-    gap-12
+    grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2
+    px-2 md:px-14 lg:px-20
+    gap-10
 }
 
 .workImage {
