--- a/src/components/WorkBox/style.module.css
+++ b/src/components/WorkBox/style.module.css
@@ -2,14 +2,17 @@
     @apply
     flex flex-col
     hover:scale-100
-    transition-all duration-300
-    bg-slate-100 rounded-2xl
+    transition-all duration-200
+    bg-white rounded-lg
     px-6 py-7 h-full
+    outline outline-gray-100
+     hover:outline-blue-600
 }
 .image {
     @apply
-    w-16 h-16
+    w-20 h-20
     rounded-full
+    flex items-start justify-start self-start
 }
 
 .title {
