--- a/src/components/CareerLine/style.module.css
+++ b/src/components/CareerLine/style.module.css
@@ -1,16 +1,14 @@
 .container {
-    @apply
-    flex flex-col
+  @apply flex flex-col
     items-center
     px-8 md:px-0
     md:w-2/3 w-full
     mx-auto
-
+    scroll-mt-4;
 }
 
 .heading {
-    @apply
-    text-4xl font-bold
+  @apply text-4xl font-bold
     text-center
-    mb-10
+    mb-10;
 }
