--- a/src/components/Main/style.module.css
+++ b/src/components/Main/style.module.css
@@ -4,7 +4,7 @@
 }
 
 .description {
-  @apply text-lg md:text-2xl text-center
-    text-gray-400 w-full md:w-3/4
+  @apply text-lg md:text-xl text-center
+    text-gray-600 w-full md:w-3/4
     mt-3 mb-6;
 }
