--- a/src/components/Skills/style.module.css
+++ b/src/components/Skills/style.module.css
@@ -1,44 +1,15 @@
 .skills {
-    @apply
-    grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 gap-10
-    px-4 2xl:px-0
-}
-
-.textArea {
-    @apply
-    col-span-1 xl:col-span-2
-    flex flex-col gap-4
-}
-
-.thingsTitle {
-    @apply
-    text-3xl
-    font-semibold
-}
-
-.thingsText {
-    @apply
-    text-xl text-gray-500
-    leading-8
+  @apply w-full px-4 2xl:px-0;
 }
 
 .skillsArea {
-    @apply
-    col-span-1
-    bg-gray-100 rounded-xl
-    py-6
-    px-4
-    flex flex-col items-start
+  @apply w-full bg-gray-50 rounded-xl py-12 px-8 flex flex-col items-start shadow-sm;
 }
 
 .skillsTitle {
-    @apply
-    text-3xl
-    font-semibold
+  @apply text-3xl font-semibold mb-4;
 }
 
 .skillsTags {
-    @apply
-    flex flex-wrap gap-1.5
-    mt-5 mb-4
+  @apply flex flex-wrap gap-4 mt-8 mb-10;
 }
