--- a/src/components/Tag/style.module.css
+++ b/src/components/Tag/style.module.css
@@ -1,13 +1,13 @@
 .tag {
-  @apply px-3 py-2 bg-gray-100 rounded-lg flex items-center justify-between gap-3 hover:bg-gray-200 transition-colors duration-200 relative;
+  @apply px-2.5 py-1.5 bg-gray-100/70 rounded-md flex items-center justify-between gap-2 hover:bg-gray-200/70 transition-colors duration-200 relative;
 }
 
 .tagContent {
-  @apply flex items-center flex-wrap gap-2;
+  @apply flex items-center flex-wrap gap-1.5;
 }
 
 .skill {
-  @apply text-gray-700 font-medium text-base;
+  @apply text-gray-600 font-normal text-sm;
 }
 
 .separator {
