--- a/src/index.css
+++ b/src/index.css
@@ -2,24 +2,30 @@
 @tailwind components;
 @tailwind utilities;
 
-html, body {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    scroll-behavior: smooth;
+html,
+body {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+    "Helvetica Neue", sans-serif;
+  scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 h2::selection {
-    color:coral; 
+  color: coral;
 }
 
-h3::selection{
-    color:coral;
+h3::selection {
+  color: coral;
 }
 
 p::selection {
-    color:coral;
+  color: coral;
 }
 
-img, picture, video, svg {
-    max-width: 100%;
-    object-fit: contain;
+img,
+picture,
+video,
+svg {
+  max-width: 100%;
+  object-fit: contain;
 }
